# qa_guru_HW16_poetry

./: README.md  pyproject.toml
